Minor UI tweaks

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   --primary-color: #ddd;
   --secondary-color: #ccc;
+  --secondary-text: #888;
   --danger-color: #ff5151;
 }
 
@@ -61,13 +62,39 @@ button:hover {
   border-bottom: 1px solid var(--secondary-color);
 }
 
-.header-details {
-  font-size: 0.8rem;
+.tip {
+  margin: 1.5rem 0;
+  padding: 1rem 1rem 0.75rem;
+  border-radius: 0.25rem;
+  border: 1px solid var(--secondary-color);
+}
+
+.tip div {
+  margin-bottom: 0.33rem;
+}
+
+.contract-details {
+  color: var(--secondary-text);
+  font-size: 0.85rem;
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  text-align: end;
-  margin-left: 2rem;
+  margin-top: 2rem;
+  border-top: 1px solid var(--secondary-color);
+  padding-top: 1.5rem;
+}
+
+.footer {
+  color: var(--secondary-text);
+  font-size: 0.85rem;
+  margin-top: 1rem;
+}
+
+.footer-link {
+  margin-right: 0.5rem;
+}
+
+.spinner {
+  margin: 0 0.75rem;
 }
 
 .wallet-info {
@@ -105,4 +132,8 @@ button:hover {
 
 .hidden {
   display: none;
+}
+
+.text-accent {
+  font-weight: 800;
 }
