Add wrong chain id warning

--- a/public/style.css
+++ b/public/style.css
@@ -130,6 +130,14 @@ button:hover {
   color: var(--danger-color);
 }
 
+.error-block {
+  padding: 1rem;
+  margin: 1rem 0;
+  color: #fff;
+  background-color: var(--danger-color);
+  border-radius: 0.33rem;
+}
+
 .text-accent {
   font-weight: 800;
 }
