Fix Core UI description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
         </form>
         <div id="tip" class="tip hidden">
           <div class="text-accent">What next</div>
-          <div>Validate evidence for any address: <a href="https://proof-of-humanity-core-ui.glitch.me/">Proof-of-Humanity Core UI</a></div>
+          <div>Validate evidence for any address<br>or transaction sender: <a href="https://proof-of-humanity-core-ui.glitch.me/">Proof-of-Humanity Core UI</a></div>
         </div>
       </div>
       <div class="contract-details">
